# high-table-frontend

./: .eslintignore  .eslintrc.json  .firebaseignore  .firebaserc  .gitignore  .rules.json  AGENT_NOTES.md  MORNING_TODO.md  README.md  WHITEPAPER.md  database.rules.json  firebase-config.js  firebase.json  firestore.rules  htp-autopayout-engine.js  htp-backgammon-ui.js  htp-blackjack-ui.js  htp-blockdag-viz.js  htp-board-engine.js  htp-c4-animation.js  htp-cancel-flow.js  htp-checkers-multijump.js  htp-chess-dnd.js  htp-chess-sync.js  htp-chess-touch.js  htp-chess-ui.js  htp-coinflip-ui.js  htp-commit-reveal.js  htp-config.js  htp-covenant-escrow-v2.js  htp-error-messages.js  htp-event-creator.js  htp-events-v3.js  htp-events.js  htp-fee-engine.js  htp-firebase-bridge.js  htp-firebase-rules.json  htp-game-router.js  htp-games-sync.js  htp-init.js  (+27 more)
.firebase/: hosting..cache
.github/workflows/: ci.yml  deploy.yml  oracle-cron.yml  rust-wasm.yml
contracts/: README.md  commit_reveal.silverscript  compile_contracts.sh  event_escrow.silverscript  hedge_escrow.silverscript  maximizer_escrow.silverscript  skill_game_escrow.silverscript
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MAINNET_LAUNCH.md  PHASES.md  PROTOCOL_RULES.md  QA_CHECKLIST.md  SECURITY_AUDIT.md
functions/: htp-oracle-server.js  package-lock.json  package.json  test-oracle.js
htp-oracle-daemon/: .env.example  .gitignore  README.md  attestor.js  oracle-daemon-once.js  oracle-daemon-v2.js  oracle-daemon.js  package-lock.json  package.json  watcher.js
htp-oracle-daemon/.github/workflows/: oracle-cron.yml
htp-oracle-daemon/miner/: monitor.js
htp-oracle-daemon/settler/: watcher.js
htp-rust-backend/: .env.example  .gitignore  Cargo.toml  README.md
htp-rust-backend/src/: blockdag.rs  broadcast.rs  escrow.rs  lib.rs  main.rs  multisig.rs  routes.rs  types.rs  wallet.rs
htp-rust-backend/src/attestor/: broadcast.rs  firebase_listener.rs  mod.rs  multi_sig.rs
htp-rust-backend/src/wasm/: autopayout.rs  backgammon.rs  blackjack.rs  board_engine.rs  coinflip.rs  covenant_escrow.rs  fee_engine.rs  mod.rs  poker.rs  rps.rs  wordduel.rs  zk_pipeline.rs
scripts/: apply-rebuild.sh
tests/: qa-p1-checklist.md  qa-smoke-test.sh
