[package]
name = "htp-rust-backend"
version = "0.1.0"
edition = "2021"
description = "High Table Protocol - Rust backend replacing WASM for native-speed transaction construction"

[[bin]]
name = "htp-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Kaspa REST API + RPC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto primitives
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
sha2 = "0.10"
blake2 = "0.10"
hmac = "0.12"
hex = "0.4"

# BIP39 mnemonic
bip39 = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Env
dotenvy = "0.15"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Base64
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
