[package]
name = "htp-rust-backend"
version = "0.1.0"
edition = "2021"
description = "High Table Protocol - Rust backend replacing WASM for native-speed transaction construction"

[lib]
name = "htp_rust_backend"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Core WASM-compatible dependencies
[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Kaspa REST API + RPC) - with WASM features
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto primitives
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
sha2 = "0.10"
blake2 = "0.10"
hmac = "0.12"
hex = "0.4"

# BIP39 mnemonic
bip39 = "2"

# Logging
log = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Random with WASM support
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Base64
base64 = "0.22"

# WASM-specific dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1